# so2control

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  LICENCE  Makefile  SO2-Control.c  SO2-Control.dsp  SO2-Control.dsw  SO2Config.conf  SO2_Control.dsp  SO2_Control.dsw  SO2_Control.plg  appveyor.yml  bashcompletion  build.bat  c8484.pcf  configurations.c  configurations.h  darkCurrent.c  droneio.sh  exposureTimeControl.c  exposureTimeControl.h  hokawo_softwar_tail.txt  imageCreation.c  imageCreation.h  imageFunctions.c  imageFunctions.h  log.c  log.h  messages.c  messages.h  readme.md  so2-camera.desktop  so2-camera.service  valgrind.supp
Test/: imageFunctions.test.c  imageFunctions.test.cpp
Test/fixtures/: oben.raw  oben_rotated.raw  unten.raw  unten_turned.raw
configurations/: SO2Config.conf  c8484.pcf  so2-camera.conf
src/: SO2-Control.c  common.c  common.h  configurations.c  configurations.h  exposureTimeControl.c  exposureTimeControl.h  imageCreation.c  imageCreation.h  kbhit.c  readme.md  so2-camera.c  spectro.c  threads.c  threads.h  timehelpers.c  timehelpers.h
src/camera/: .gitignore  CMakeLists.txt  camera-cli.c  camera.h  readme.md
src/camera/mock/: camera.c  camera.h  configurations.c  configurations.h  getBufferFromFile.c
src/camera/phx/: c8484.pcf  camera.c  camera.h  configurations.c  configurations.h  exposure.c
src/comm/: CMakeLists.txt  comm-cli.c  comm.h  readme.md
src/comm/b/: comm-cli
src/comm/b/camera/: camera-cli
src/comm/b/camera/mock/fixtures/: bot.raw  bot_dark.raw  top.raw  top_dark.raw
src/comm/b/spectrometer/: spectrometer-cli  spectrometry-cli
src/comm/b/webcam/: webcam-cli
src/comm/socket/: comm.c
src/darkFrame/custom/: darkCurrent.c
src/filterwheel/: CMakeLists.txt  filterwheel-cli.c  filterwheel.h
src/filterwheel/arduino/: arduino.ino
src/filterwheel/custom/: darkCurrent.c  darkCurrent.h
src/filterwheel/hardware/: readme.md
src/filterwheel/mock/: filterwheel.c
src/filterwheel/serial/: filterwheel.c
src/io/: .gitignore  CMakeLists.txt  bufferToImage.c  camera-raw2png.c  getBufferFromFile.c  imageconverter.c  io-cli.c  io.c  io.h  make_png_header.c  readme.md  testing_2014_09_22-23_43_55_984_cam_top.raw  webcam-raw2png.c
src/io/converter/: getBufferFromFile.c
src/io/custom/: bufferToImage.c  crc.c  io.c  make_png_header.c
src/io/logs/: readme.md
src/io/mock/fixtures/: testing_2014_09_22-23_43_55_984_cam_bot.raw
src/io/tests/: check_png_headers.bat  check_png_headers.sh  check_raw_headers.bat  check_raw_headers.sh
src/log/: .gitignore  CMakeLists.txt  log.h  messages.c  messages.h
src/log/custom/: log.c  log.h
src/log/mock/: log.c
src/processing/: imageFunctions.c  imageFunctions.h
src/spectrometer/: .gitignore  CMakeLists.txt  plot.plot  readme.md  spectrometer-cli.c  spectrometer.h  spectrometerlive.py  spectrometry-cli.c  spectroscopy.c  spectroscopy.h
src/spectrometer-shutter/: .gitignore  CMakeLists.txt  readme.md  spectrometer-shutter-cli.c  spectrometer-shutter.h
src/spectrometer-shutter/manual/: spectrometer-shutter.c
src/spectrometer-shutter/mock/: spectrometer-shutter.c
src/spectrometer-shutter/pololu-maestro/: spectrometer-shutter.c
src/spectrometer/mock/: getBufferFromFile.c  spectrometer.c
src/spectrometer/oceanoptics/: spectrometer.c
src/webcam/: .gitignore  CMakeLists.txt  readme.md  webcam-cli.c  webcam.h
src/webcam/elpcam/: webcam.c
src/webcam/mock/: webcam.c
src/webcam/mock/fixtures/: mock.raw
src/webcam/ucam1/: webcam.c
